--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,51 @@
-body {
-    background-color: #f2f2f2;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+#country-select,
+#city-select {
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+.hidden {
+  display: none;
+}
+
+.big-card {
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+padding: 1em;
+gap: 1em;
+}
+.big-card div{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+  width: 35%;
+  border-radius: .5em;
+  background-color: lightgray;
   }
-  
-  .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+  .big-card div h3{ 
+    width: 100%;
     text-align: center;
-  }
+    }
   
-  h1 {
-    text-align: center;
-  }
-  
-  form {
-    margin-bottom: 20px;
-  }
-  
-  .weather-card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .weather-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .weather-icon {
-    margin-right: 20px;
-  }
-  
-  .temperature {
-    font-size: 48px;
-    font-weight: bold;
-  }
-  
-  .description {
-    font-size: 24px;
-    color: #666;
-  }
-  
-  .hidden {
-    display: none;
-  }
+
+
