--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,18 @@ form {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
+  gap: .7em;
 }
 
 #country-select,
 #city-select {
-  margin-bottom: 10px;
   padding: 5px;
 }
+#advice {
+  color: red;
+  font-weight: bold;
+}
+
 
 .hidden {
   display: none;
@@ -46,6 +51,3 @@ gap: 1em;
     width: 100%;
     text-align: center;
     }
-  
-
-
